Add: ajax call, change website when database is changed

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ h5 {
     margin-top: 30px;
     padding: 20px;
     max-width: 1024px;
-    color: white;
+    color: black;
 
     gap: 10px;
     display: -ms-flexbox;
